# Cairn

./: .gitignore  .pre-commit-config.yaml  ACCURACY.md  AGENT_SETUP.md  CHANGELOG.md  CHARTER.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  PROGRESS.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  install.ps1  install.sh  pyproject.toml  repomix-output.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: adapter_request.yml  bug_report.yml  config.yml  docs_report.yml  feature_request.yml
.github/workflows/: ci.yml  demo-pages.yml  install.yml  performance.yml  publish.yml  security.yml
cairn/: __init__.py  __main__.py  config.py
cairn/agents/: __init__.py  profiles.py  protocol.py  registry.py  replay.py
cairn/api/: __init__.py  openapi.py  server.py
cairn/artifacts/: __init__.py  registry.py
cairn/assets/: dashboard.css  dashboard.js  index.html  session.css  session.html  session.js
cairn/cache/: action_cache.py  cas.py  store.py
cairn/cli/: api_cmd.py  artifact_cmd.py  build_cmd.py  collab_cmd.py  context_cmd.py  diff_cmd.py  doctor_cmd.py  graph_cmd.py  groups.py  guard.py  help_cmd.py  hook_cmd.py  ingest_cmd.py  init_cmd.py  live_cmd.py  main.py  plan_cmd.py  prompt_cmd.py  render_cmd.py  report_cmd.py  runs_cmd.py  security_cmd.py  sessions_cmd.py  show_cmd.py  snapshot_cmd.py  status_cmd.py  validate_cmd.py  watch_cmd.py  workflow_cmd.py
cairn/collab/: __init__.py  acl.py  cursor.py  export.py  import_bundle.py  protocol.py
cairn/context/: __init__.py  config.py  gauge.py  registry.py
cairn/data/: prices.toml
cairn/diagnose/: __init__.py  cascade.py  engine.py  ideal.py  localize.py  should_stop.py  taxonomy.py
cairn/doctor/: checks.py  mcp.py
cairn/executor/: coalesce.py  runner.py
cairn/fleet/: __init__.py  export.py
cairn/graph/: builder.py  engine.py  levels.py  session_graph.py
cairn/ingest/: __init__.py  backfill.py  cursors.py  data_quality.py  detect.py  hook_cmd.py  ingest.py  normalizer.py  project_paths.py  tokenize.py  tokenizer_audit.py  types.py  usage.py  verify.py  watch.py  writer.py
cairn/insights/: __init__.py  engine.py  rules.py
cairn/ledger/: __init__.py  ledger.py  resolve.py  run_record.py  schema.py  storage.py
cairn/live/: __init__.py  server.py
cairn/loader/: prompts.py  refs.py  sources.py  toml.py
cairn/mcp/: __init__.py  server.py  tools.py
cairn/metrics/: __init__.py  compute.py  constants.py  difficulty.py  fingerprint.py  normalized.py  waste.py
cairn/model/: artifact.py  errors.py  messages.py  nodes.py  project.py  session.py  system.py  workflow.py
cairn/optimize/: __init__.py  apply.py  causal.py  engine.py  evidence.py  impact.py  memory.py  reflector.py  targets.py
cairn/outcomes/: __init__.py  git.py  labels.py  score.py  tests.py
cairn/performance/: __init__.py  bench.py
cairn/plan/: action_key.py  cost.py  planner.py
cairn/pricing/: __init__.py  engine.py
cairn/profile/: __init__.py  compute.py  decompose.py  detectors.py
cairn/prompts/: __init__.py  registry.py
cairn/providers/: capabilities.py  completion.py  credentials.py  protocol.py  recorded.py  registry.py
cairn/render/: __init__.py  bundle.py  capture_bundle.py  dash_payload.py  diff.py  embedding.py  extract.py  graph_layout.py  html.py  narrative.py  scrub.py  session_payload.py  turns.py
cairn/report/: __init__.py  engine.py  schema.py
cairn/sdk/: __init__.py  project.py  render.py  workflow.py
cairn/security/: __init__.py  audit.py  auth.py  encrypt.py
cairn/snapshot/: __init__.py  engine.py  protocol.py
cairn/util/: canonical.py  tokens.py
cairn/workflow/: __init__.py  engine.py  loader.py
docs/: README.md  accessibility.md  adapters.md  api.md  architecture-audit.md  archive.md  browser-support.md  ci.md  cli.md  concepts.md  configuration-reference.md  configuration.md  data-lifecycle.md  data-model.md  egress.md  getting-started.md  guard.md  legacy-v3.md  mcp.md  optimize.md  otlp.md  pages.md  performance.md  phase-0-vision-validation.md  policy.md  pricing.md  privacy.md  publishing.md  recap.md  regressions.md  release.md  releasing.md  reproducible-builds.md  resource-shield.md  roadmap.md  sdk.md  security.md  storage-modes.md  testing.md  time-ranges.md  (+2 more)
docs/adr/: 0001-independence-from-lattice-and-stratum.md  (+10 more)
examples/: README.md
licenses/: OFL-1.1.txt
scripts/: benchmark.py  build_ui.py  check_bundle_size.py  check_coverage.py  check_pypi_version.py  check_reproducibility.py  e2e_server.py  extract_release_notes.py  gen_accuracy.py  gen_cli_docs.py  gen_placeholder_assets.py  gen_readme_assets.py  generate_config_reference.py  hatch_build.py  install.sh  prepare_e2e_static.py  release_check.py  validate_release_tag.py
server/: __init__.py  app.py  cli.py  config.py  configuration.py  doctor.py  query_filters.py  recap_share.py  update.py
spike/: README.md  __init__.py  cache.py  canonical.py  dag.py  executor.py  keys.py  prompts.py  provider.py  run.py
tests/: adapter_conformance.py  conftest.py  test_accuracy.py  test_action_key.py  test_adapter_doctor.py  test_adapter_scaffold.py  test_agents.py  test_analyze_diagnose.py  test_analyze_difficulty.py  test_analyze_fingerprint.py  test_analyze_incremental.py  test_analyze_outcomes.py  test_analyze_regions.py  test_api.py  test_api_charts.py  test_api_module_boundaries.py  test_api_profile.py  test_api_session.py  test_api_setup_scan.py  test_app_live.py  test_archive.py  test_artifacts.py  test_assets_design.py  test_budget_burn.py  test_canonical.py  test_capture_bundle_v3.py  test_capture_phase5.py  test_cas.py  test_cdn_grep.py  test_check_cmd.py  test_circuit_breakers.py  test_cli_module_boundaries.py  test_cli_money.py  test_cli_show.py  test_cli_surface.py  test_cli_top_why.py  test_collab.py  test_collection_modes.py  test_concurrency.py  test_configuration.py  (+123 more)
ui/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
(+556 files in other folders)
