[project]
name = "cairn-workspace"
version = "0.0.1"
description = "Local-first self-analyzing platform for AI coding agents — context profiling, behavioral fingerprinting, outcome quality, measured optimize, and MCP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Cairn contributors" }]
keywords = ["llm", "agents", "provenance", "workflow", "observability"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "httpx>=0.27",
    "numpy>=2.0",
]

[project.urls]
Homepage = "https://github.com/Harsh-Daga/Cairn"
Documentation = "https://github.com/Harsh-Daga/Cairn/blob/main/docs/README.md"
Repository = "https://github.com/Harsh-Daga/Cairn"
Issues = "https://github.com/Harsh-Daga/Cairn/issues"

[project.scripts]
cairn = "cairn.cli.main:main"

[project.optional-dependencies]
precise = ["tiktoken>=0.7"]

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["*.js", "*.css", "*.html"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cairn"]