[project]
name = "cairn-workspace"
version = "4.0.0"
description = "Local-first observability and self-improvement platform for AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Cairn contributors" }]
keywords = ["llm", "agents", "observability", "tracing", "self-improvement"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "numpy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "uvicorn[standard]>=0.32",
]

[project.urls]
Homepage = "https://github.com/Harsh-Daga/Cairn"
Documentation = "https://github.com/Harsh-Daga/Cairn/blob/main/README.md"
Repository = "https://github.com/Harsh-Daga/Cairn"
Issues = "https://github.com/Harsh-Daga/Cairn/issues"

[project.scripts]
cairn = "server.cli:app"

[project.entry-points."cairn.adapters"]
# Third-party adapters register here, e.g.:
# my_agent = "my_pkg.adapters.my_agent_adapter:MyAgentAdapter"

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
precise = ["tiktoken>=0.7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
norecursedirs = ["_legacy", ".git", "ui", "node_modules"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["ui", "server/static", "*.js", "*.css", "*.html"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
packages = ["server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.hatch.build.targets.wheel.force-include]
"server/static" = "server/static"

[tool.hatch.build.targets.wheel.hooks.custom]
path = "scripts/hatch_build.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "ui/node_modules",
  "ui/dist",
  ".git",
]

[tool.hatch.build.targets.sdist.force-include]
"server/static" = "server/static"
